--- a/counsellingApp/excess/excess.html
+++ b/counsellingApp/excess/excess.html
@@ -1624,3 +1624,204 @@ RESULT.HTML
   {% endcomment %}
 
 RESULT.HTML
+
+NOTIFICATION.HTML
+ {% comment %}
+        <div id="uni">
+          <p style="opacity: 0.4">2:00pm</p>
+        </div>
+      </div>
+
+      <div id="mybox4">
+        <img id="imgnotification" src="{% static "media/University.png"%}"
+        alt="profile image"/>
+        <div id="unique">
+          <p id="notname">UNIVERSITY OF GHANA</p>
+          <p id="notnamesub">Message...</p>
+        </div>
+        <div id="uni">
+          <p style="opacity: 0.4">2:00pm</p>
+        </div>
+      </div>
+
+      <div id="mybox4">
+        <img id="imgnotification" src="{% static "media/University.png"%}"
+        alt="profile image"/>
+        <div id="unique">
+          <p id="notname">UNIVERSITY OF GHANA</p>
+          <p id="notnamesub">Message...</p>
+        </div>
+        <div id="uni">
+          <p style="opacity: 0.4">2:00pm</p>
+        </div>
+      </div>
+
+      <div id="mybox4">
+        <img id="imgnotification" src="{% static "media/deposit.jpg"%}"
+        alt="profile image"/>
+        <div id="unique">
+          <p id="notname">SARAH SMITH</p>
+          <p id="notnamesub">Message...</p>
+        </div>
+        <div id="uni">
+          <p style="opacity: 0.4">2:00pm</p>
+        </div>
+      </div>
+
+      <div id="mybox4">
+        <img id="imgnotification" src="{% static "media/University.png"%}"
+        alt="profile image"/>
+        <div id="unique">
+          <p id="notname">UNIVERSITY OF GHANA</p>
+          <p id="notnamesub">Message...</p>
+        </div>
+        <div id="uni">
+          <p style="opacity: 0.4">2:00pm</p>
+        </div>
+      </div>
+
+      <div id="mybox4">
+        <img id="imgnotification" src="{% static "media/University.png"%}"
+        alt="profile image"/>
+        <div id="unique">
+          <p id="notname">UNIVERSITY OF GHANA</p>
+          <p id="notnamesub">Message...</p>
+        </div>
+        <div id="uni">
+          <p style="opacity: 0.4">2:00pm</p>
+        </div>
+      </div>
+
+      <div id="mybox4">
+        <img id="imgnotification" src="{% static "media/deposit.jpg"%}"
+        alt="profile image"/>
+        <div id="unique">
+          <p id="notname">SARAH SMITH</p>
+          <p id="notnamesub">Message...</p>
+        </div>
+        <div id="uni">
+          <p style="opacity: 0.4">2:00pm</p>
+        </div>
+      </div>
+
+      <div id="mybox4">
+        <img id="imgnotification" src="{% static "media/University.png"%}"
+        alt="profile image"/>
+        <div id="unique">
+          <p id="notname">UNIVERSITY OF GHANA</p>
+          <p id="notnamesub">Message...</p>
+        </div>
+        <div id="uni">
+          <p style="opacity: 0.4">2:00pm</p>
+        </div>
+      </div>
+
+      <div id="mybox4">
+        <img id="imgnotification" src="{% static "media/University.png"%}"
+        alt="profile image"/>
+        <div id="unique">
+          <p id="notname">UNIVERSITY OF GHANA</p>
+          <p id="notnamesub">Message...</p>
+        </div>
+        <div id="uni">
+          <p style="opacity: 0.4">2:00pm</p>
+        </div>
+      </div>
+
+      <div id="mybox4">
+        <img id="imgnotification" src="{% static "media/deposit.jpg"%}"
+        alt="profile image"/>
+        <div id="unique">
+          <p id="notname">SARAH SMITH</p>
+          <p id="notnamesub">Message...</p>
+        </div>
+        <div id="uni">
+          <p style="opacity: 0.4">2:00pm</p>
+        </div>
+      </div>
+
+      <div id="mybox4">
+        <img id="imgnotification" src="{% static "media/University.png"%}"
+        alt="profile image"/>
+        <div id="unique">
+          <p id="notname">UNIVERSITY OF GHANA</p>
+          <p id="notnamesub">Message...</p>
+        </div>
+        <div id="uni">
+          <p style="opacity: 0.4">2:00pm</p>
+        </div>
+      </div>
+
+      <div id="mybox4">
+        <img id="imgnotification" src="{% static "media/University.png"%}"
+        alt="profile image"/>
+        <div id="unique">
+          <p id="notname">UNIVERSITY OF GHANA</p>
+          <p id="notnamesub">Message...</p>
+        </div>
+        <div id="uni">
+          <p style="opacity: 0.4">2:00pm</p>
+        </div>
+      </div>
+
+      <div id="mybox4">
+        <img id="imgnotification" src="{% static "media/deposit.jpg"%}"
+        alt="profile image"/>
+        <div id="unique">
+          <p id="notname">SARAH SMITH</p>
+          <p id="notnamesub">Message...</p>
+        </div>
+        <div id="uni">
+          <p style="opacity: 0.4">2:00pm</p>
+        </div>
+      </div>
+
+      <div id="mybox4">
+        <img id="imgnotification" src="{% static "media/University.png"%}"
+        alt="profile image"/>
+        <div id="unique">
+          <p id="notname">UNIVERSITY OF GHANA</p>
+          <p id="notnamesub">Message...</p>
+        </div>
+        <div id="uni">
+          <p style="opacity: 0.4">2:00pm</p>
+        </div>
+      </div>
+
+      <div id="mybox4">
+        <img id="imgnotification" src="{% static "media/deposit.jpg"%}"
+        alt="profile image"/>
+        <div id="unique">
+          <p id="notname">UNIVERSITY OF GHANA</p>
+          <p id="notnamesub">Message...</p>
+        </div>
+        <div id="uni">
+          <p style="opacity: 0.4">2:00pm</p>
+        </div>
+      </div>
+
+      <div id="mybox4">
+        <img id="imgnotification" src="{% static "media/deposit.jpg"%}"
+        alt="profile image"/>
+        <div id="unique">
+          <p id="notname">SARAH SMITH</p>
+          <p id="notnamesub">Message...</p>
+        </div>
+        <div id="uni">
+          <p style="opacity: 0.4">2:00pm</p>
+        </div>
+      </div>
+
+      <div id="mybox4">
+        <img id="imgnotification" src="{% static "media/University.png"%}"
+        alt="profile image"/>
+        <div id="unique">
+          <p id="notname">UNIVERSITY OF GHANA</p>
+          <p id="notnamesub">Message...</p>
+        </div>
+        <div id="uni">
+          <p style="opacity: 0.4">2:00pm</p>
+        </div>
+      </div>
+      {% endcomment %}
+NOTIFICATION.HTML
